--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/Theme.RSSReader">
+        android:theme="@style/Theme.RSSReader"
+        android:usesCleartextTraffic="true">
         <activity android:name=".FeedActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
